# filewatcher

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: FileSystemEvent.cpp  FileSystemEvent.h  SignalManager.cpp  SignalManager.h  Watcher.cpp  Watcher.h  main.cpp
